--- a/.env.example
+++ b/.env.example
@@ -1,74 +1,175 @@
-# Environment Configuration
-ENVIRONMENT=development
-DEBUG=True
+# ================================================================
+# BioIntel.AI Environment Configuration
+# ================================================================
+# Copy this file to .env and fill in your actual values
+# NEVER commit .env to version control!
 
-# Database Configuration
-DATABASE_URL=postgresql://user:password@localhost/biointel
+# ================================================================
+# DEPLOYMENT ENVIRONMENT
+# ================================================================
+ENVIRONMENT=production
+DEBUG=False
 
-# Security Keys (CHANGE THESE IN PRODUCTION!)
-SECRET_KEY=your-secret-key-change-in-production
-JWT_SECRET_KEY=your-jwt-secret-key-change-in-production
+# ================================================================
+# DATABASE CONFIGURATION (REQUIRED)
+# ================================================================
+# Get from: https://supabase.com/ or https://neon.tech/
+# Format: postgresql://username:password@host:port/database
+DATABASE_URL=postgresql://postgres:your_password@db.your_project.supabase.co:5432/postgres
+
+# ================================================================
+# REDIS CACHE (REQUIRED)
+# ================================================================
+# Get from: https://upstash.com/ or https://redis.com/
+# Format: redis://username:password@host:port
+REDIS_URL=redis://your_user:your_pass@host:6379
+
+# ================================================================
+# SECURITY KEYS (REQUIRED)
+# ================================================================
+# Generate with: python3 -c "import secrets; print(secrets.token_urlsafe(32))"
+SECRET_KEY=your-super-secret-key-change-this-in-production
+JWT_SECRET_KEY=your-jwt-secret-key-change-this-in-production
 JWT_ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 REFRESH_TOKEN_EXPIRE_DAYS=7
 
-# AI API Keys
-ANTHROPIC_API_KEY=your-anthropic-api-key-here
-OPENAI_API_KEY=your-openai-api-key-here
+# ================================================================
+# FREE AI CONFIGURATION (NO API KEYS NEEDED)
+# ================================================================
+# Uses Hugging Face Transformers for AI analysis - completely free!
+USE_FREE_AI=true
+HUGGINGFACE_CACHE_DIR=./cache/huggingface
+TORCH_CACHE_DIR=./cache/torch
 
-# Redis Configuration
-REDIS_URL=redis://localhost:6379
+# Free Bioinformatics APIs (no API keys needed)
+PUBMED_BASE_URL=https://eutils.ncbi.nlm.nih.gov/entrez/eutils
+UNIPROT_BASE_URL=https://rest.uniprot.org
+ENSEMBL_BASE_URL=https://rest.ensembl.org
+STRING_BASE_URL=https://string-db.org/api
+KEGG_BASE_URL=https://rest.kegg.jp
 
-# Rate Limiting
-RATE_LIMIT_REQUESTS=100
-RATE_LIMIT_WINDOW=3600
+# ================================================================
+# MONITORING & LOGGING (OPTIONAL)
+# ================================================================
+# Get from: https://sentry.io/
+SENTRY_DSN=https://your-sentry-dsn@sentry.io/your-project
 
-# File Upload Configuration
-MAX_FILE_SIZE=10485760  # 10MB in bytes
-ALLOWED_FILE_TYPES=csv,xlsx,xls,pdf,txt
+# Logging
+LOG_LEVEL=INFO
+LOG_FORMAT=%(asctime)s - %(name)s - %(levelname)s - %(message)s
 
-# Reports Configuration
-REPORTS_DIR=/tmp/biointel_reports
-
-# Email Configuration (Optional)
+# ================================================================
+# EMAIL CONFIGURATION (OPTIONAL)
+# ================================================================
+# For user notifications and password reset
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USERNAME=your-email@gmail.com
-SMTP_PASSWORD=your-app-password
+SMTP_PASSWORD=your-gmail-app-password
 
-# Monitoring (Optional)
-SENTRY_DSN=your-sentry-dsn-here
+# ================================================================
+# CORS AND SECURITY
+# ================================================================
+# Add your frontend URLs here
+CORS_ORIGINS=http://localhost:3000,https://yourdomain.com,https://app.yourdomain.com
 
-# CORS Configuration
-CORS_ORIGINS=http://localhost:3000,https://biointel.ai
+# ================================================================
+# RATE LIMITING
+# ================================================================
+RATE_LIMIT_REQUESTS=1000
+RATE_LIMIT_WINDOW=3600
 
-# Data Processing Limits
+# ================================================================
+# FILE UPLOAD CONFIGURATION
+# ================================================================
+MAX_FILE_SIZE=52428800  # 50MB in bytes
+ALLOWED_FILE_TYPES=csv,xlsx,xls,pdf,txt,tsv
+
+# ================================================================
+# REPORTS AND PROCESSING
+# ================================================================
+REPORTS_DIR=/tmp/biointel_reports
 MAX_GENES=50000
 MAX_SAMPLES=10000
 MAX_PAPER_LENGTH=100000
 
-# Logging Configuration
-LOG_LEVEL=INFO
-LOG_FORMAT=%(asctime)s - %(name)s - %(levelname)s - %(message)s
-
-# Cache Configuration
+# ================================================================
+# CACHE CONFIGURATION
+# ================================================================
 CACHE_TTL=3600
+ENABLE_CACHING=True
 
-# Pagination
+# ================================================================
+# PAGINATION
+# ================================================================
 DEFAULT_PAGE_SIZE=20
 MAX_PAGE_SIZE=100
 
-# Background Tasks
+# ================================================================
+# BACKGROUND TASKS (OPTIONAL)
+# ================================================================
+# For async processing
 CELERY_BROKER_URL=redis://localhost:6379/0
 CELERY_RESULT_BACKEND=redis://localhost:6379/0
 
-# Data Retention
+# ================================================================
+# DATA RETENTION
+# ================================================================
 DATA_RETENTION_DAYS=90
 
-# API Configuration
+# ================================================================
+# API CONFIGURATION
+# ================================================================
 API_V1_PREFIX=/api/v1
 
-# Feature Flags
+# ================================================================
+# FEATURE FLAGS
+# ================================================================
 ENABLE_ANALYTICS=True
-ENABLE_CACHING=True
 ENABLE_RATE_LIMITING=True
+
+# ================================================================
+# PRODUCTION OPTIMIZATIONS
+# ================================================================
+# Use these in production only
+# WORKERS=4
+# TIMEOUT=120
+# KEEP_ALIVE=65
+
+# ================================================================
+# DEVELOPMENT SETTINGS (DEVELOPMENT ONLY)
+# ================================================================
+# Only use these in development - comment out in production
+# DEBUG=True
+# ENVIRONMENT=development
+# LOG_LEVEL=DEBUG
+
+# ================================================================
+# NOTES
+# ================================================================
+# 1. Replace ALL placeholder values with your actual credentials
+# 2. Generate strong SECRET_KEY and JWT_SECRET_KEY
+# 3. Keep this file secure and never commit to version control
+# 4. Rotate credentials regularly (every 90 days)
+# 5. Monitor usage and costs regularly
+# 6. Set up alerts for unusual activity
+# 7. Test all connections before deploying to production
+
+# ================================================================
+# QUICK SETUP COMMANDS
+# ================================================================
+# Generate security keys:
+# python3 -c "import secrets; print('SECRET_KEY=' + secrets.token_urlsafe(32))"
+# python3 -c "import secrets; print('JWT_SECRET_KEY=' + secrets.token_urlsafe(32))"
+
+# Test database connection:
+# psql "postgresql://username:password@host:port/database"
+
+# Test Redis connection:
+# redis-cli -u "redis://username:password@host:port" ping
+
+# Test free APIs:
+# curl -X GET "https://eutils.ncbi.nlm.nih.gov/entrez/eutils/esummary.fcgi?db=pubmed&id=30049270&retmode=json"
+# curl -X GET "https://rest.uniprot.org/uniprotkb/P04637.json"
+# curl -X GET "https://rest.ensembl.org/lookup/id/ENSG00000141510?content-type=application/json"
