--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,20 @@
-# FastAPI and Web Framework
+# FastAPI and Web Framework (Core)
 fastapi==0.104.1
 uvicorn==0.24.0
 python-multipart==0.0.6
 starlette==0.27.0
 
-# Database and ORM
+# Database and ORM (Core)
 sqlalchemy==2.0.23
 psycopg2-binary==2.9.9
 alembic==1.13.0
-databases==0.8.0
 
-# Authentication and Security
+# Authentication and Security (Core)
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
 pydantic[email]==2.5.0
 
-# Data Science and Bioinformatics
+# Data Science and Bioinformatics (Core)
 pandas==2.1.3
 numpy==1.24.3
 scipy==1.11.4
@@ -24,72 +22,60 @@ scikit-learn==1.3.2
 matplotlib==3.8.2
 seaborn==0.13.0
 plotly==5.17.0
+statsmodels==0.14.0
+networkx==3.2.1
 
-# Machine Learning and AI
-anthropic==0.7.8
-openai==1.3.6
-langchain==0.0.340
-chromadb==0.4.18
-sentence-transformers==2.2.2
+# Machine Learning and AI (FREE ALTERNATIVES)
+transformers==4.36.0
+torch==2.1.0
+tokenizers==0.15.0
+huggingface-hub==0.19.4
 
-# File Processing
+# File Processing (Core)
 PyPDF2==3.0.1
 pdfplumber==0.10.3
-python-docx==1.1.0
 openpyxl==3.1.2
 
-# Image Processing
+# Image Processing (Core)
 Pillow==10.1.0
 
-# Redis and Caching
+# Redis and Caching (Core)
 redis==5.0.1
-hiredis==2.2.3
 
-# Async and Background Tasks
-celery==5.3.4
+# Async and Background Tasks (Core)
 aiofiles==23.2.1
 httpx==0.25.2
+aiohttp==3.9.1
 
-# Validation and Serialization
+# Bioinformatics APIs and Data Processing (Core)
+biopython==1.81
+xmltodict==0.13.0
+beautifulsoup4==4.12.2
+lxml==4.9.3
+
+# Validation and Serialization (Core)
 pydantic==2.5.0
 pydantic-settings==2.1.0
-marshmallow==3.20.1
 
-# Testing
-pytest==7.4.3
-pytest-asyncio==0.21.1
-httpx==0.25.2
-faker==20.1.0
-
-# Monitoring and Logging
+# Monitoring and Logging (Core)
 structlog==23.2.0
-sentry-sdk==1.38.0
 python-dotenv==1.0.0
 
-# Security
+# Security (Core)
 cryptography==41.0.8
 bcrypt==4.1.2
 itsdangerous==2.1.2
 
-# Environment and Configuration
+# Environment and Configuration (Core)
 python-dotenv==1.0.0
 click==8.1.7
 
-# Report Generation
+# Report Generation (Core)
 jinja2==3.1.2
-weasyprint==60.2
 reportlab==4.0.7
 
-# Data Validation
+# Data Validation (Core)
 email-validator==2.1.0
-phonenumbers==8.13.26
 
-# CORS and Middleware
-fastapi-cors==0.0.6
+# CORS and Middleware (Core)
 slowapi==0.1.8
-
-# Development Tools
-black==23.11.0
-flake8==6.1.0
-isort==5.12.0
-pre-commit==3.6.0
